补齐其他资料 & Update README

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio
+.vs/
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.sln
+**/x64/*
+
+# Visual Studio Code
+.vscode/
+
+# Other
+*.DS_Store
+*.eddx
+*.png
